# POD_GeoscienceAustralia

./:  ECOM1_srp.in   ECOM1_srp0.in   ECOM1_srp1.in   EQM0.in   EQM1.in   EQM10.in   EQM11.in   EQM2.in   EQM3.in   EQM4.in   EQM5.in   EQM6.in   EQM7.in   EQM8.in   EQM9.in   EQMpred.in   EQMprepred.in   VEQ0.in   VEQ1.in   VEQ10.in   VEQ11.in   VEQ2.in   VEQ3.in   VEQ4.in   VEQ5.in   VEQ6.in   VEQ7.in   VEQ8.in   VEQ9.in   emp_bias0.in   emp_bias1.in   emp_bias2.in   emp_bias3.in   emp_cpr0.in   emp_cpr1.in   emp_cpr2.in   emp_cpr3.in   emp_cpr999.in  .gitattributes  .gitignore  (+240 more)
aws/cloud9/: install.sh  resize.sh
config/: ECOM2_srp.in  EQM.in  POD.in  VEQ.in  emp_bias.in
data/: SHA0MGXRAP_20182000000_01D_15M_ORB.SP3  eopc04_08_IAU2000.62-now  eopc04_14_IAU2000.62-now  finals2000A.daily  igs16403.sp3  igs18822.sp3  igs18885.sp3  igs19423.sp3  igs19424.sp3  igs20100.sp3  igs20104.sp3  igu20561_00.sp3  igu20561_18.sp3
docker/: README.md  dockerfile  dockerfile-fullbuild
docs/: CONFIG.md  EQM.md  EXAMPLES.md  INSTALL.md  POD.md  POD_configuration.md  README.md  VEQ.md
ex1/: EQM.in  VEQ.in
ex2/: EQM.in  POD.in  VEQ.in
ex3/: EQM.in  POD.in  VEQ.in
ex4/: ECOM1_srp.in  EQM.in  EQM0.in  EQM01.in  EQM0_G01.in  EQM0_G01_imd.in  EQM0_G01back.in  EQM0_G01backback.in  EQM0_G02.in  EQM0_G02_imd.in  EQM0_G02back.in  EQM0_G02backback.in  EQM0_G03.in  EQM0_G03_imd.in  POD.in  POD.status  VEQ.in  VEQ0.in  VEQ01.in  VEQ0_G01.in  VEQ0_G01_imd.in  VEQ0_G01back.in  VEQ0_G01backback.in  VEQ0_G02.in  VEQ0_G02_imd.in  VEQ0_G02back.in  VEQ0_G02backback.in  VEQ0_G03.in  VEQ0_G03_imd.in  ascp1950.430  eopc04_IAU2000.62-now  goco05s.gfc  header.430_229  igs20624.sp3  igs_metadata_2063.snx  leap.second
ex5/: EQM.in  POD.in  VEQ.in
examples/ex1/: ex1.clean  sh_ex1
examples/ex1/solution/: gag19424.sp3  gag19424_igs19424_orbdiff_rtn.out  gag19424_igs19424_orbitstat_N.out  gag19424_igs19424_orbitstat_R.out  gag19424_igs19424_orbitstat_T.out  orb_icrf.out  orb_itrf.out  pod.out  pod.rms  pseudobs_ICRF.out  pseudobs_ITRF.out
examples/ex2/: COD0MGXFIN_20191990000_01D_05M_ORB.SP3  EQM.in  POD.in  VEQ.in  eop_c04_14_iau2000a_19  eopc04_14_IAU2000.62-now  ex2.clean  sh_ex2
examples/ex2/solution/: gag20624.sp3  gag20624__orbitstat_N.out  gag20624__orbitstat_R.out  gag20624__orbitstat_T.out  orb_icrf.out  orb_itrf.out  pod.out  pod_C.rms  pod_E.rms  pod_G.rms  pod_R.rms  pseudobs_ICRF.out  pseudobs_ITRF.out
examples/ex3/: EQM.in  POD.in  VEQ.in  ex3.clean  igs20010.sp3  igs20011.sp3  sh_ex3
examples/ex3/solution/: gag20010.obx  gag20010.sp3  gag20010_attitude.out  gag20010_igs20010_orbdiff_rtn.out  gag20010_igs20010_orbitstat_N.out  gag20010_igs20010_orbitstat_R.out  gag20010_igs20010_orbitstat_T.out  orb_icrf.out  orb_itrf.out  pod.out  pod.rms
examples/ex4/: EQM.in  POD.in  VEQ.in  ex4.clean  header.430_229  igs_metadata_2063.snx  orb_pea.out  sh_ex4
examples/ex4/solution/: gag20624.obx  gag20624_attitude.out  gag20624_igs20624_orbdiff_rtn.out  gag20624_igs20624_orbitstat_N.out  gag20624_igs20624_orbitstat_R.out  gag20624_igs20624_orbitstat_T.out  orb_icrf.out  orb_itrf.out  pod.out  pod.rms
examples/ex5/: EQM.in  POD.in  ascp1950.430  finals2000A.daily  goco05s.gfc  leap.second  run_pod.sh
old/: compilation_CRS2TRS_EOP.txt  compilation_GYT.txt  compilation_GYT_v2.txt  compilation_GYT_v3.txt  compilation_POD.txt
scripts/: compare_pod_rms.py  download_examples.py  download_tables.py  download_test_examples.py  install_examples.py  res_plot.py  rms_bar_plot.py  rms_bar_plot_bitbucket.py  run_brd.sh  run_podpea.sh  sh_links.pod  update_tables.py
src/: 0_Val_EOP.f90  BOXWINIT.f90  EOP.f90  ERPFBOXW.f  GYT_v2.f03  GYT_v3.f03  PROPBOXW.f  R3.for  SRPFBOXW.f  SURFBOXW.f  apr_srp.f90  arctan.f90  asc2eph.f90  att_matrix.f03  attitude.f03  brd2ecef.f  brdc2ecef.f  brdc2ecef.f90  brdc3210.16n  brdc_cmdline.f03  brdc_qc_gal.f90  brdc_qc_gps.f90  brdcorbit.f90  chkbrdc.f  chkbrdc.f90  chkbrdc_gal.f  chkbrdc_gps.f  crf_bff.f90  crs_trs.f90  dat.for  eclips.f  eclips201707.f  eclipse_integstep.f03  ecom_init.f03  empirical_cor.f03  empirical_init_file.f03  eom_iers.f90  eop_c04.f90  eop_finals2000A.f90  eop_interp.f90  (+132 more)
tables/: .gitattributes  eopc04_14_IAU2000.62-now  header.430_229  igs_metadata_2063.snx  igs_metadata_2081.snx  igs_metadata_2081_GA.snx  leap.second
test/: .gitattributes  EQM.in  EQM0.in  EQM01.in  POD.in  POD.yaml  VEQ.in  VEQ0.in  VEQ01.in  gag19424.sp3.good  gag19424_igs19424_orbdiff_rtn.out.good  igs19424.sp3  pod.out.good  pod.rms.good  sh_test_pod  sh_test_pod_vg  test_clean
tp_test/: ECOM1_srp.in  ECOM1_srpG01.in  ECOM1_srpG02.in  ECOM1_srpG03.in  ECOM1_srpG04.in  ECOM1_srpG05.in  ECOM1_srpG06.in  ECOM1_srpG07.in  ECOM1_srpG08.in  ECOM1_srpG09.in  ECOM1_srpG10.in  ECOM1_srpG11.in  ECOM1_srpG12.in  ECOM1_srpG13.in  ECOM1_srpG14.in  ECOM1_srpG15.in  ECOM1_srpG16.in  ECOM1_srpG17.in  ECOM1_srpG18.in  ECOM1_srpG19.in  ECOM1_srpG20.in  ECOM1_srpG21.in  ECOM1_srpG22.in  ECOM1_srpG23.in  ECOM1_srpG24.in  ECOM1_srpG25.in  ECOM1_srpG26.in  ECOM1_srpG27.in  ECOM1_srpG28.in  ECOM1_srpG29.in  ECOM1_srpG30.in  ECOM1_srpG31.in  ECOM1_srpG32.in  EQM01.in  EQM0_G01_imd.in  EQM0_G01pred.in  EQM0_G01predpred.in  EQM0_G02_imd.in  EQM0_G02pred.in  EQM0_G02predpred.in  (+155 more)
tp_test_2/: ECOM1_srp.in  ECOM1_srpG01.in  ECOM1_srpG02.in  ECOM1_srpG03.in  ECOM1_srpG04.in  ECOM1_srpG05.in  ECOM1_srpG06.in  ECOM1_srpG07.in  ECOM1_srpG08.in  ECOM1_srpG09.in  ECOM1_srpG10.in  ECOM1_srpG11.in  ECOM1_srpG12.in  ECOM1_srpG13.in  ECOM1_srpG14.in  ECOM1_srpG15.in  ECOM1_srpG16.in  ECOM1_srpG17.in  ECOM1_srpG18.in  ECOM1_srpG19.in  ECOM1_srpG20.in  ECOM1_srpG21.in  ECOM1_srpG22.in  ECOM1_srpG23.in  ECOM1_srpG24.in  ECOM1_srpG25.in  ECOM1_srpG26.in  ECOM1_srpG27.in  ECOM1_srpG28.in  ECOM1_srpG29.in  ECOM1_srpG30.in  ECOM1_srpG31.in  ECOM1_srpG32.in  EQM.in  EQM0.in  EQM01.in  EQM0_  EQM0_.in  EQM0_G01.in  EQM0_G01_imd.in  (+301 more)
